# callisto

./: .gitignore  README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  pyproject.toml  requirements.txt  start-web.sh  tsconfig.json  web_server.py
callisto/: __init__.py  __main__.py  auto_config.py  cli.py  config.py  content_safety.py  engine.py  monitor.py  openclaw.py  sanitizer.py  web.py
docs/: API.md  AUTO_CALL_GUIDE.md  AUTO_INTEGRATION_GUIDE.md  CALLISTO_CALL_TIMING.md  COMPREHENSIVE_GUIDE.md  CONTRIBUTING.md  DETECTION_LOGIC.md  LICENSE  NEW_FEATURES_GUIDE.md  OPENCLAW_PLUGIN.md  OPENCLAW_PLUGIN.md.backup  OVERVIEW.md  PROJECT_MAP.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README.md.backup  STARTUP_SCAN_GUIDE.md  TEST_COMMAND_GUIDE.md  WEB_DASHBOARD_GUIDE.md  WEB_IMPLEMENTATION_SUMMARY.md  WEB_QUICKSTART.md  callisto_vs_clawguard.md  callisto_vs_nsf_clawguard.md  callisto_vs_nsf_clawguard_report.md  openclaw_startup_guide.md  paper.aux  paper.out  paper.tex
integration_examples/: INTEGRATION_GUIDE.md  agent_with_callisto.py  interceptor_patch.py
paper/: callisto_paper.tex  gen_pdf.py
scripts/: analyze_detection_stats.py  auto_integration_demo.py  auto_scanner.py  batch_test_validation.py  generate_test_batches.py  monitor_openclaw.py  scan_config.py  scan_skills.py  test_detection.py  test_new_features.py  test_openclaw_integration.py
tests/: README.md  agentdojo_detection_test.py  agentdojo_detection_test_v2.py  callisto_vs_nsf_command_test.py  content_safety_test.py  eval_nsf_clawguard.py  (+2 more)
(+42 files in other folders)
