[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callisto"
version = "0.1.0"
description = "CALLISTO — Causal And LLM-Level Invocation Sequence Temporal Observer"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "networkx>=3.2",
]

[project.optional-dependencies]
full = [
    "torch>=2.1",
    "sentence-transformers>=2.2",
    "aiohttp>=3.9",
    "watchfiles>=0.21",
]
eval = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
dev = [
    "pytest>=7.4",
]

[project.scripts]
callisto = "callisto.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*", "callisto*"]
